# rsomics-fasta-stats

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs  fasta_stats.rs
src/: cli.rs  compute.rs  lib.rs  main.rs  output.rs
tests/: compat.rs
tests/golden/: stats9.fa  stats9.seqkit-all.expected  stats9.seqkit-basic.expected  tiny.fa
